# src/main/java/com/enoc/transaction/model/Transaction.java
@@ -1,10 +1,10 @@
 package com.enoc.transaction.model;
-import lombok.*;
-import org.springframework.data.mongodb.core.mapping.Document;
-import org.bson.codecs.pojo.annotations.BsonId;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import lombok.*;
+import org.bson.codecs.pojo.annotations.BsonId;
+import org.springframework.data.mongodb.core.mapping.Document;
 
 @Getter
 @Setter
@@ -16,22 +16,30 @@ public class Transaction {
 
     @BsonId
     private String id;
-
-    private String productId; // FK to Product
-
+    private String customerId;
+    private String productId;
+    private String destinationAccountId;
     private TransactionType type;
-
+    private TransactionOrigin origin;
     private BigDecimal amount;
-
+    private BigDecimal commissionApplied;
     private LocalDateTime date;
-
     private String description;
 
     public enum TransactionType {
         DEPOSIT,
         WITHDRAWAL,
         PAYMENT,
-        CREDIT_CHARGE
+        CREDIT_CHARGE,
+        TRANSFER_INTERNAL,
+        TRANSFER_EXTERNAL
+
     }
+
+    public enum TransactionOrigin {
+        INTERNAL,
+        EXTERNAL
+    }
+
 }
 
